src/objects/Milestone__c.object
<CustomObject>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Milestone_Status__c</fullName>
        <formula>IF( AND(Due_Date__c &gt;=TODAY(),  Open_Tasks__c =0),&quot;Complete&quot;,
IF( AND(Due_Date__c &lt;TODAY(),  Open_Tasks__c &gt;0), &quot;Overdue&quot;, &quot;Current&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Milestone Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open_Tasks__c</fullName>
        <label>Open Tasks</label>
        <summaryFilterItems>
            <field>Project_Task__c.Status__c</field>
            <operation>equals</operation>
            <value>Assigned, Working</value>
        </summaryFilterItems>
        <summaryForeignKey>Project_Task__c.Milestone__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Appirio_PSAe__Proj__c</referenceTo>
        <relationshipLabel>Milestones</relationshipLabel>
        <relationshipName>Milestones</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Planned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Milestone</label>
    <nameField>
        <label>Milestone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>